--- a/Monolithe/jsconfig.json
+++ b/Monolithe/jsconfig.json
@@ -2,6 +2,9 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
+            "@/api/*": [
+                "pages/api/*"
+            ],
             "@/services/*": [
                 "services/*"
             ],
