--- a/Microservices/services/docker-compose.yml
+++ b/Microservices/services/docker-compose.yml
@@ -17,8 +17,10 @@ services:
             - password-request-db
     password-request-db:
         image: postgres
+        environment: 
+            - POSTGRES_HOST_AUTH_METHOD=trust
         ports:
-            '5004:5432'
+            - '5004:5432'
     product-service:
         build: ./product-service
         ports:
@@ -28,4 +30,4 @@ services:
     product-db:
         image: elasticsearch:7.12.0
         ports:
-            '5006:9200'
+            - '5006:9200'
