--- a/Microservices/services/password-request-service/Dockerfile
+++ b/Microservices/services/password-request-service/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:14-alpine
 WORKDIR /app
 COPY . .
+COPY ./init.pgsql /docker-entrypoint-initdb.d/
 EXPOSE 5003
 ENV ENV=production
 ENV PORT=5003
