--- a/Microservices/services/docker-compose.yml
+++ b/Microservices/services/docker-compose.yml
@@ -1,14 +1,4 @@
 services:
-    auth:
-        build: ./auth-service
-        ports:
-            - '5001:5001'
-        links:
-            - auth-db
-    auth-db:
-        image: mongo
-        ports:
-            - '5002:27017'
     password-request:
         build: ./password-request-service
         ports:
@@ -17,17 +7,10 @@ services:
             - password-request-db
     password-request-db:
         image: postgres
+        restart: always
         environment: 
             - POSTGRES_HOST_AUTH_METHOD=trust
+        volumes:
+            - ./init:/docker-entrypoint-initdb.d
         ports:
             - '5004:5432'
-    product-service:
-        build: ./product-service
-        ports:
-            - '5005:5005'
-        links:
-            - product-db
-    product-db:
-        image: elasticsearch:7.12.0
-        ports:
-            - '5006:9200'
