--- a/Microservices/services/kubernetes/cart/cart-db-svc.yml
+++ b/Microservices/services/kubernetes/cart/cart-db-svc.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cart-svc
+  name: cart-db
   labels:
-    name: cart-svc
+    name: cart-db
     app: fastcommerce
 spec:
   selector:
-    name: cart-svc
+    name: cart-db
   type: ClusterIP
   ports:
-    - name: cart-svc
+    - name: cart-db
       port: 27017
       targetPort: 27017
