--- a/Microservices/services/discount-code-service/Dockerfile
+++ b/Microservices/services/discount-code-service/Dockerfile
@@ -2,8 +2,8 @@ FROM node:14-alpine
 WORKDIR /app
 COPY . .
 ADD ./init/init.sql /docker-entrypoint-initdb.d/
-EXPOSE 5007
+EXPOSE 5009
 ENV ENV=production
-ENV PORT=5007
+ENV PORT=5009
 RUN npm install --production
-CMD ["npm", "start:prod"]
+CMD ["npm", "run", "dev"]
