--- a/Microservices/services/kubernetes/discount-code/discount-code-db-svc.yml
+++ b/Microservices/services/kubernetes/discount-code/discount-code-db-svc.yml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: discount-code-svc
+  name: discount-code-db
   labels:
-    name: discount-code-svc
+    name: discount-code-db
     app: fastcommerce
 spec:
   selector:
-    name: discount-code-svc
+    name: discount-code-db
   type: ClusterIP
   ports:
-    - name: discount-code-svc
-      port: 27017
-      targetPort: 27017
+    - name: discount-code-db
+      port: 5432
+      targetPort: 5432
