--- a/Monolithe/package.json
+++ b/Monolithe/package.json
@@ -7,7 +7,9 @@
     "bootstrap": "npx runner -c ./lib/runner.js bootstrap-database",
     "build": "next build",
     "start": "next start",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles",
+    "test-cart": "concurrently \"next dev\" \"jest -t \"Cart\" --detectOpenHandles\"",
+    "test-bill": "concurrently \"next dev\" \"jest -t \"Bill\" --detectOpenHandles\""
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.8",
@@ -19,6 +21,7 @@
     "babel-jest": "^26.6.3",
     "framer-motion": "^4.1.2",
     "http": "0.0.1-security",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.9",
     "next-server": "^9.0.5",
     "next-test-api-route-handler": "^1.2.23",
