--- a/Monolithe/package.json
+++ b/Monolithe/package.json
@@ -12,8 +12,8 @@
     "test-password-request": "concurrently \"next dev\" \"jest ./test/passwordReqService.test.js --detectOpenHandles\"",
     "test-cart": "concurrently \"next dev\" \"jest ./test/cartService.test.js --detectOpenHandles\"",
     "test-bill": "concurrently \"next dev\" \"jest ./test/billService.test.js --detectOpenHandles\"",
-    "test-backup": "concurrently \"next dev\" \"jest ./test/backupService.test.js --detectOpenHandles\"",
-    "test-user-standalone": "jest -t ./test/userService.test.js --detectOpenHandles"
+    "test-backup": "concurrently \"next dev\" \"jest ./test/backupService.test.js --detectOpenHandles\"", 
+    "test-history": "concurrently \"next dev\" \"jest ./test/historyService.test.js --detectOpenHandles\""
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.8",
