add discount-code and cart per user

--- a/Microservices/services/auth-service/Dockerfile
+++ b/Microservices/services/auth-service/Dockerfile
@@ -6,4 +6,4 @@ ENV ENV=production
 ENV PORT=5001
 ENV SECRET=1t1qw6yb
 RUN npm install --production
-CMD ["npm", "start"]
+CMD ["npm", "run", "start:prod"]
