--- a/Microservices/services/auth-service/package.json
+++ b/Microservices/services/auth-service/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "better-npm-run start:dev",
-    "start:test": "better-npm-run start:test",
-    "start:prod": "better-npm-run start:prod"
+    "start:prod": "better-npm-run start:prod",
+    "test:dev": "concurrently \"better-npm-run start:dev\" \"better-npm-run test:dev\"",
+    "test:prod": "concurrently \"better-npm-run start:prod\" \"better-npm-run test:prod\"",
+    "test": "jest --detectOpenHandles"
   },
   "betterScripts": {
     "start:dev": {
@@ -15,14 +17,20 @@
         "ENV": "development"
       }
     },
-    "start:test": {
-      "command": "node index.js",
-      "env": {
-        "ENV": "test"
-      }
-    },
     "start:prod": {
       "command": "node index.js",
+      "env": {
+        "ENV": "production"
+      }
+    },
+    "test:dev": {
+      "command": "npm run test",
+      "env": {
+        "ENV": "development"
+      }
+    },
+    "test:prod": {
+      "command": "npm run test",
       "env": {
         "ENV": "production"
       }
@@ -34,13 +42,18 @@
     "bcryptjs": "^2.4.3",
     "better-npm-run": "^0.1.1",
     "body-parser": "^1.19.0",
+    "concurrently": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-openid-connect": "^2.3.0",
+    "isomorphic-unfetch": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.2",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
