--- a/Microservices/services/bill-service/package.json
+++ b/Microservices/services/bill-service/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start:dev": "better-npm-run start:dev",
     "start:test": "better-npm-run start:test",
-    "start:prod": "better-npm-run start:prod"
+    "start:prod": "better-npm-run start:prod",
+    "test:dev": "concurrently \"better-npm-run start:dev\" \"better-npm-run test:dev\"",
+    "test:prod": "concurrently \"better-npm-run start:prod\" \"better-npm-run test:prod\"",
+    "test": "jest --detectOpenHandles"
   },
   "betterScripts": {
     "start:dev": {
@@ -26,14 +29,29 @@
       "env": {
         "ENV": "production"
       }
+    },
+    "test:dev": {
+      "command": "npm run test",
+      "env": {
+        "ENV": "development"
+      }
+    },
+    "test:prod": {
+      "command": "npm run test",
+      "env": {
+        "ENV": "production"
+      }
     }
   },
   "author": "KHATTABI Hamza",
   "license": "MIT",
   "dependencies": {
     "better-npm-run": "^0.1.1",
+    "concurrently": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "isomorphic-unfetch": "^3.1.0",
+    "jest": "^26.6.3",
     "mongoose": "^5.12.4",
     "nodemon": "^2.0.7"
   }
